--- a/database.prop.properties
+++ b/database.prop.properties
@@ -1,4 +1,4 @@
-db.url=jdbc:mysql://localhost:3307/COMPANY?useSSL=false
+db.url=jdbc:mysql://127.0.0.1:3307/COMPANY?useSSL=false&allowPublicKeyRetrieval=true
 db.user=poudelb2
 db.password=abc123
 db.driver=com.mysql.cj.jdbc.Driver
