--- a/database.prop.properties
+++ b/database.prop.properties
@@ -1,4 +1,4 @@
-db.url=jdbc:mysql://localhost:3306/COMPANY?useSSL=false&allowPublicKeyRetrieval=true
+db.url=jdbc:mysql://localhost:3306/COMPANY
 db.user=root
 db.password=Biplovisme@100
 db.driver=com.mysql.cj.jdbc.Driver
